tg-30 documentacion springProfile

--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 # = WEB 
 # ===============================
 
+# ============= Profile =============
+spring.profiles.default=dev
 
 # ============= API =============
 server.servlet.context-path=/api
@@ -40,7 +42,6 @@ app.mail.activate=${ACTIVATE_SENDING_EMAIL:false}
 
 mail.from=${SMTP_EMAIL:sgh@test.org}
 
-api.profile=prod
 # ===============================
 # = FRONTEND
 # ===============================
