--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -8,3 +8,6 @@ databaseChangeLog:
 - include:
     file: incrementales-v0_1.yml
     relativeToChangelogFile: true
+- include:
+    file: incrementales-v0_2.yml
+    relativeToChangelogFile: true
