tg-47. [BE] Agregar control sobre quien crea y modifica las instancias auditables

--- a/back-end/hospital-api/src/test/resources/application.properties
+++ b/back-end/hospital-api/src/test/resources/application.properties
@@ -25,7 +25,7 @@ token.expiration=5
 refreshToken.expiration=6
 validationToken.expiration=8
 
-api.profile=test
+spring.profiles.default=test
 # =============== EMAIL =================
 spring.mail.host=${SMTP_HOST:smtp.gmail.com}
 spring.mail.username=${SMTP_USERNAME:user}
