tg-27 se agrego modulo RestClient e integracion con Renaper

--- a/back-end/hospital-api/src/test/resources/application.properties
+++ b/back-end/hospital-api/src/test/resources/application.properties
@@ -3,6 +3,9 @@
 # ===============================
 
 
+# ===== SPRING PROFILE ==========
+spring.profiles.active=test
+
 # ============= API =============
 server.servlet.context-path=/api
 server.port = 9091
@@ -25,7 +28,6 @@ token.expiration=5
 refreshToken.expiration=6
 validationToken.expiration=8
 
-spring.profiles.default=test
 # =============== EMAIL =================
 spring.mail.host=${SMTP_HOST:smtp.gmail.com}
 spring.mail.username=${SMTP_USERNAME:user}
@@ -63,6 +65,10 @@ app.other.languages=${OTHER_LANGUAGES:en-US}
 
 actuator.configuration.whitelist=${ACTUATOR_WHITELIST:}
 actuator.configuration.authenticated=${ACTUATOR_REQUIRED_AUTHENTICATION:false}
+
+
+#========= RENAPER ==========#
+ws.renaper.tokenExpiration=15
 
 
 # ===============================
