tg-96 [DBA] Carga de Metadatos en entidades DM de modulo internacion

--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -11,3 +11,6 @@ databaseChangeLog:
 - include:
     file: incrementales-v0_2.yml
     relativeToChangelogFile: true
+- include:
+    file: incrementales-v0_3.yml
+    relativeToChangelogFile: true
