tg-108. tg-94. tg-72. (FIX) Baseline para activar validate

--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -78,7 +78,7 @@ spring.datasource.validationQuery = SELECT 1
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 
 
 management.endpoint.metrics.enabled=false
