--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -6,11 +6,11 @@ databaseChangeLog:
     file: baseline.yml
     relativeToChangelogFile: true
 - include:
-    file: incrementales-v0_1.yml
+    file: incrementales-v0_1_1.yml
     relativeToChangelogFile: true
 - include:
-    file: incrementales-v0_2.yml
+    file: incrementales-v0_1_2.yml
     relativeToChangelogFile: true
 - include:
-    file: incrementales-v0_3.yml
+    file: incrementales-v0_1_3.yml
     relativeToChangelogFile: true
